<resources>
    <string name="app_name" translatable="false">RestaSearch</string>
    <string name="button_accept_policy">Accept</string>
    <string name="checkbox_accept_policy">I have read and accept the privacy policy.</string>
    <string name="label_policy" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a purus dignissim metus imperdiet pharetra. Vivamus aliquam leo sed mollis venenatis. In pretium id turpis non pellentesque. Aenean vehicula urna blandit metus pellentesque lacinia. Vestibulum eget leo nisl. Ut at consequat quam. Sed nec placerat neque, eu finibus odio. Duis laoreet posuere venenatis. Quisque consectetur vitae neque et fringilla. Quisque volutpat nibh at libero porttitor congue. Donec dictum tincidunt diam, sed venenatis nunc ornare in. Nulla et sem in sem ullamcorper ullamcorper non vel tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras ut velit eu nisi tempor tempor at blandit erat.  Nulla at pellentesque orci. Morbi tempus porta tincidunt. In ut leo tellus. Donec nec accumsan nulla. Fusce at placerat tellus, id sodales nisi. Mauris nec diam velit. Pellentesque viverra accumsan mi id iaculis. Pellentesque posuere, ipsum et tempor euismod, diam diam imperdiet nibh, non malesuada ante metus nec augue. Vestibulum purus tortor, malesuada ac auctor et, dapibus ac neque. Vestibulum in tempor massa, id lobortis nunc.  Donec imperdiet, velit ac mollis faucibus, ex urna varius enim, sed tempor nibh nulla non ex. Mauris mauris massa, dapibus id facilisis id, mollis a diam. Nullam velit diam, rutrum eu tincidunt vel, suscipit nec risus. Aliquam at tortor sapien. Fusce venenatis maximus iaculis. Aenean nunc mi, eleifend vel placerat vitae, porta a quam. Proin in sagittis risus, ac iaculis odio. Etiam sed maximus est, sed vulputate turpis. Cras mollis leo et metus congue, sed tincidunt enim dapibus. Morbi eu eros lorem. Phasellus quis quam vel leo maximus hendrerit sit amet eu turpis. Aenean ultricies felis ut semper accumsan.  In efficitur urna eu convallis venenatis. Etiam imperdiet leo sed tellus dignissim, quis malesuada mi varius. Pellentesque malesuada a justo at convallis. Sed turpis diam, pulvinar ut augue id, scelerisque dapibus ante. Quisque pellentesque sapien massa, egestas sodales tellus mattis quis. Vivamus venenatis ligula et ligula volutpat, ac fermentum libero ultricies. Pellentesque vel pretium enim. Duis et convallis lacus. Morbi vel turpis id enim luctus maximus. Nulla tortor sem, blandit at augue at, accumsan pellentesque lectus.  Fusce sit amet turpis elementum, sollicitudin purus elementum, mattis nisi. Duis interdum metus non metus pretium efficitur sed sit amet justo. Sed eget enim id erat auctor varius. Praesent laoreet dolor ut scelerisque ultricies. Fusce consectetur magna ac ligula consectetur rhoncus. Phasellus bibendum, orci eget euismod tincidunt, justo diam scelerisque sapien, at condimentum sem sapien in quam. Nunc vulputate dui justo, id ultricies tortor rutrum vel. Maecenas ac magna eget nulla blandit ultrices. Nulla vulputate venenatis orci a sodales. Nullam in urna dictum, consequat leo a, porta turpis. Cras tincidunt felis ligula, id ultrices elit tincidunt eget. Cras libero dolor, sagittis in ex elementum, ullamcorper pretium velit.</string>
    <string name="navigation_drawer_open" translatable="false">RestaSearchMenuOpen</string>
    <string name="navigation_drawer_close" translatable="false">RestaSearchMenuClose</string>
    <string name="menu_inici">Home</string>
    <string name="menu_preferits">Favorites</string>
    <string name="menu_historial">History</string>
    <string name="menu_idioma">Language</string>
    <string name="menu_privacitat_us">Privacy and conditions of use</string>
    <string name="filtres_restaurant_obert">Opened</string>
    <string name="filtres_distancia">Distance</string>
    <string name="filtres_preu">Price</string>
    <string name="filtres_valoracio">Rating</string>
    <string name="filtres_netejar">Clean Filters</string>
    <string name="privacitat_us_catala" translatable="false">POLÍTICA DE PRIVACITAT
Darrera actualització: Maig 2021.
1. INFORMACIÓ A L’USUARI
RestaSearch, S.L., com a Responsable del Tractament, l’informa que, segons el que disposa en el Reglament (UE) 2016/679, de 27 d’abril, (RGPD) i en la L.O. 3/2018, de 5 de desembre, de protecció de dades i garantia dels drets digitals (LOPDGDD), tractarem les seves dades tal com es reflexa en la present Política de Privacitat.
En aquesta Política de Privacitat descrivim com recollim les seves dades personals i perquè els recollim, què fem amb ells, amb qui els compartim, com els protegim i les seves opcions pel que fa al tractament de les seves dades personals.
Aquesta Política s’aplica al tractament de les seves dades personals recollides per l’empresa per a la prestació dels seus serveis. Si accepta les mesures d’aquesta Política, accepta que tractem les seves dades personals com es defineix en aquesta Política.

2. CONTACTE
Denominació social: RestaSearch, S.L.
Nom comercial: RestaSearch
CIF: 00000000X
Domicili: Carrer de Cartellà, 8, 17007 Girona
e-mail: RestaSearch@restasearch.com

3. PRINCIPIS CLAU
Sempre hem estat compromesos amb prestar els nostres serveis amb el més alt grau de qualitat, el que inclou tractar les seves dades amb seguretat i transparència. Els nostres principis son:
•	Legalitat: Només recopilarem les seves dades personals per a fins específics, explícits i legítims.
•	Minimització de dades: Limitem la recollida de dades de caràcter personal al que es estrictament rellevant i necessari per als fins per al que s’han recopilat.
•	Limitació de la Finalitat: Només recollirem les seves dades personals per als fins declarats i només segons els seus desitjos.
•	Precisió: Mantindrem les seves dades personals exactes i actualitzades.
•	Seguretat de les Dades: Aplicarem les mesures tècniques i organitzatives adequades i proporcionals als riscos per garantir que les seves dades no pateixin danys, tals com divulgació o accés no autoritzat, la destrucció accidental o il·lícita o la seva pèrdua accidental o alteració i qualsevol altre forma de tractament il·lícit.
•	Accés y Rectificació: Disposem de medis per a que accedeixi o rectifiqui les seves dades quan ho consideri oportú.
•	Conservació: Conservem les seves dades personals de manera legal i apropiada i només mentre es necessari per als fins per els que s’han recopilat.
•	Les transferències internacionals: Quan es doni el cas de que les dades vagin a ser transferides fora de la UE/EEE es protegiran adequadament.
•	Tercers: L’accés i transferència de dades personals a tercers es duen a terme d’acord amb les lleis i reglaments aplicables i amb les garanties contractuals adequades.
•	Marketing Directe i cookies: Complim amb la legislació aplicable en matèria de publicitat i cookies.
4. RECOLLIDA I TRACTAMENT DE LES SEVES DADES PERSONALS
Els tipus de dades que es poden sol·licitar i tractar son:
•	Dades de caràcter identificatiu.
També recollim de forma automàtica dades sobre la seva visita al nostre lloc web  segons es descriu en la política de cookies.
Sempre que sol·licitem les Dades personals, l’informarem amb claredat de quines dades personals recollim i amb quina finalitat. En general, recollim i tractem les seves dades personals amb el propòsit de:
•	Proporcionar informació, serveis, productes, informació rellevant i novetats en el sector.
•	Envio de comunicacions.
5. LEGITIMIDAD
D’acord amb la normativa de protecció de dades aplicable, les seves dades personals podran tractar-se sempre que:
•	Ens ha donat el seu consentiment als efectes del tractament. Per suposat podrà retirar el seu consentiment en qualsevol moment.
•	Per requeriment legal.
•	Per existir un interès legítim que no es vegi menyscabat per els seus drets de privacitat, com per exemple l’enviament de informació comercial bé per subscripció al nostre newsletter o per la seva condició de client.
•	Per ser necessària para la prestació d’algun dels nostres serveis mitjançant la relació contractual entre vostè i nosaltres.
6. COMUNICACIÓN DE DATOS PERSONALES
Les dades poden ser comunicades a empreses relacionades amb RESTASEARCH, S.L. per a la prestació dels diversos serveis en qualitat d’Encarregats del Tractament. L’empresa no realitzarà cap cessió, a no se que hi hagi obligació legal.
7. SUS DERECHOS
En relació a la recollida i tractament de les dades personals, pot posar-se en contacte amb nosaltres en qualsevol moment per:
•	Accedir a les seves dades personals i a qualsevol altre informació indicada en el Article 15.1 del RGPD.
•	Rectificar les seves dades personals que siguin inexactes o estiguin incompletes d’acord amb l’Article 16 del RGPD.
•	Suprimir les seves dades personals d’acord amb l’Article 17 del RGPD.
•	Limitar el tractament de les seves dades personals d’acord amb l’Article 18 del RGPD.
•	Sol·licitar la portabilitat de les seves dades d’acord amb l’Article 20 del RGPD.
•	Oposar-se al tractament de les seves dades personals d’acord amb l’article 21 del RGPD.
Si ha atorgat el seu consentiment per alguna finalitat concreta, té dret a retirar el consentiment atorgat en qualsevol moment, sense que això afecti a la licitud del tractament basat en el consentiment previ a la seva retirada rrhh.
Pot exercir aquests drets enviant comunicació, motivada y acreditada, a restasearch@restasearch.com
També té dret a presentar una reclamació davant l’Autoritat de control competent (www.aepd.es) si considera que el tractament no se ajusta a la normativa vigent.
8. INFORMACIÓN LEGAL
Els requisits d’aquesta Política complementen, i no reemplacen, qualsevol altre requisit existent sota la llei de protecció de dades aplicable, que serà la que prevalgui en qualsevol cas.
Aquesta Política està subjecta a revisions periòdiques i l’empresa pot modificar-la en qualsevol moment. Quan això passi, l’avisarem de qualsevol canvi i li demanarem que torni a llegir la versió més recent de la nostra Política i que confirmi la seva acceptació.

</string>
    <string name="language_choose">Choose your language.</string>
    <string name="language_en">english</string>
    <string name="language_es">spanish</string>
    <string name="language_ca">catalan</string>
    <string name="button_cancel">cancel</string>
    <string name="alert_price_1">Inexpensive</string>
    <string name="alert_price_2">Moderate</string>
    <string name="alert_price_3">Expensive</string>
    <string name="alert_price_4">Very Expensive</string>
    <string name="alert_distance_1">10km</string>
    <string name="alert_distance_2">20+km</string>
    <string name="alert_distance_3">30+km</string>
    <string name="alert_distance_4">40+km</string>
    <string name="alert_distance_5">50+km</string>
</resources>