<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdiomaActivity">

    <TextView
        android:id="@+id/label_lang_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/menu_idioma"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/language_choose"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/label_lang_title"
        app:layout_constraintStart_toStartOf="@+id/label_lang_title"
        app:layout_constraintTop_toBottomOf="@+id/label_lang_title" />

    <Button
        android:id="@+id/lang_en"
        style="@style/EstilBotoPrincipal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:tag="en"
        android:text="@string/language_en"
        android:textSize="20sp"
        app:icon="@drawable/ic_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/lang_ca"
        style="@style/EstilBotoPrincipal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:tag="ca"
        android:text="@string/language_ca"
        android:textSize="20sp"
        app:icon="@drawable/ic_language"
        app:layout_constraintEnd_toEndOf="@+id/lang_es"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lang_es"
        app:layout_constraintTop_toBottomOf="@+id/lang_es" />

    <Button
        android:id="@+id/lang_es"
        style="@style/EstilBotoPrincipal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:tag="es"
        android:text="@string/language_es"
        android:textSize="20sp"
        app:icon="@drawable/ic_language"
        app:layout_constraintEnd_toEndOf="@+id/lang_en"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lang_en"
        app:layout_constraintTop_toBottomOf="@+id/lang_en" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/EstilBotoPrincipal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>